--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,6 +19,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          dotnet: false
+      - name: Show space
+        run: df . -h
       - name: Set env
         run: |
             echo "SERVER=${GITHUB_REF##*/}" >> $GITHUB_ENV
