--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -24,6 +24,15 @@ jobs:
         with:
           dotnet: false
           large-packages: false
+      - name: Remove all .NET versions
+        run: |
+          sudo apt-get remove --purge -y dotnet* || true
+          sudo apt-get autoremove -y
+          sudo rm -rf /usr/share/dotnet /etc/dotnet
+      - name: Install .NET 6.0
+        uses: actions/setup-dotnet@v4
+        with:
+            dotnet-version: 6.0.x
       - name: Set env
         run: |
             echo "SERVER=${GITHUB_REF##*/}" >> $GITHUB_ENV
